lib_LTLIBRARIES= libmicro.la
libmicro_la_LDFLAGS= -lboost_system
libmicro_la_CXXFLAGS= -std=gnu++11 -DBOOST_LOG_DYN_LINK

libmicro_la_SOURCES = app.cpp cookie.cpp micro_thread.cpp mime_types.cpp reply.cpp request.cpp request_handler.cpp request_parser.cpp response.cpp server.cpp stop_watch.cpp url_route.cpp work_queue.cpp

pkginclude_HEADERS = app.hpp cookie.hpp header.hpp mime_types.hpp module.hpp reply.hpp request.hpp request_handler.hpp request_parser.hpp response.hpp types.hpp url_route.hpp work_queue.hpp
